construção do modelo finalizada

--- a/analise-sentimento/analise.ipynb
+++ b/analise-sentimento/analise.ipynb
@@ -50,7 +50,7 @@
         "from sklearn.metrics import accuracy_score, classification_report\n",
         "from sklearn.model_selection import cross_val_predict"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -88,7 +88,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "0NAebFpaOMMa",
-        "outputId": "6adbf89c-e786-4c7d-eaee-c275e56b6f78",
+        "outputId": "bbfdf675-d6d7-48a3-f472-e05f63612f96",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -184,7 +184,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Nlzf8wJCOMaa",
-        "outputId": "ab287d90-2c98-4819-903a-d2050428ebd7",
+        "outputId": "8f8b16c2-824d-4373-f1db-1abd1c995bd1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -223,7 +223,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "FVj92KCgOMr5",
-        "outputId": "d3a75631-d9a9-4cf4-ee7c-31e8a4e138c2",
+        "outputId": "fb1138af-993b-4672-9809-642c01e04386",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -262,7 +262,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "IRYHm5o9OxJ4",
-        "outputId": "8be324e4-9b5f-43ac-ca6a-11b93e33e0d3",
+        "outputId": "91178503-fc03-40bf-a463-d477be056a92",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -301,7 +301,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "z5qY0i1oOxYf",
-        "outputId": "455568fb-78a8-4af8-8933-f5d9e661f785",
+        "outputId": "1e66361b-73c2-456d-8905-5b053d043f02",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -324,6 +324,204 @@
             "tags": []
           },
           "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "J1fl8BUBPpvZ"
+      },
+      "source": [
+        "### Construindo o modelo"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "guMzn-SFPy8v"
+      },
+      "source": [
+        "Separando as frases e os sentimentos"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nCob-tM8P2Pq",
+        "outputId": "5bb4d2bc-ade6-4a4e-91c6-899a24aeb5a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "frases = base_de_dados['Frase'].values\n",
+        "frases"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['a pandemia me impediu de fazer muitas coisas legais infelizmente não pude aproveitar esse ano',\n",
+              "       'acordei desanimada, não quero fazer nada o dia todo',\n",
+              "       'não consigo parar de chorar, foi horrível perder um parente próximo por causa de uma pandemia',\n",
+              "       'me sinto amada pelos meus familiares e isso me faz muito bem',\n",
+              "       'estou feliz porque consegui o estágio que queria, agora é só felicidade!',\n",
+              "       'receber você na minha casa é uma alegria imensa, venha sempre que puder',\n",
+              "       'me sinto muito bem hoje, estou disposta, feliz e bem humorada',\n",
+              "       'te odeio pelo que você é, não pelo que faz',\n",
+              "       'só tenho raiva, ódio e rancor',\n",
+              "       'obrigada por me ajudar, fiquei contente com isso',\n",
+              "       'estou contente fui aprovada na faculdade, vou cursar o que eu gosto',\n",
+              "       'sou muito grata a você',\n",
+              "       'corrupção é algo me decepciona, sempre que vejo notícias sobre isso fico mal',\n",
+              "       'a covid matou muitas pessoas no mundo todo, isso é algo muito triste',\n",
+              "       'meu pai está muito doente, não sei se ele vai conseguir sobreviver, estou abalada',\n",
+              "       'queria que fosse o último dia da minha vida, não desejo mais viver nesse mundo injusto',\n",
+              "       'não gostei de ficar no mesmo local que aquela pessoa, odeio o jeito que ela se comporta',\n",
+              "       'estou a ponto de cometer um crime de tanto ódio que sinto',\n",
+              "       'falhei em tudo nessa vida, fui muito humilhado, não sei mais para quê sirvo',\n",
+              "       'fui demitida essa semana, e não sei o que fazer, me sinto triste com toda essa situação',\n",
+              "       'já é tarde demais infelizmente nosso amor acabou não quero ficar com você',\n",
+              "       'eu sinto ciúmes e a raiva vem de brinde',\n",
+              "       'odeio lições de moral, especialmente de quem não tem moral',\n",
+              "       'tem gente que não adianta mandar para o inferno, porque o capeta devolve',\n",
+              "       'que alegria ter a companhia de vocês nesse dia especial, me sinto bem com todos ao meu lado',\n",
+              "       'desejo a você tudo de bom, muitas felicidades',\n",
+              "       'a saudade é algo triste',\n",
+              "       'sem você aqui o tempo só maltrata os dias são ruins, a vida tá sem graça',\n",
+              "       'tenho tanto azar, fico mais triste ainda com isso',\n",
+              "       'você faz falta',\n",
+              "       'ainda bem que te encontrei agora sou mais feliz',\n",
+              "       'está tudo indo muito bem, todos estão felizes com suas vidas',\n",
+              "       'odiei essa roupa que ganhei, a pessoa sabe que odeio e mesmo assim comprou para mim',\n",
+              "       'que trânsito maldito, perdi muito tempo parado aqui nessa porra',\n",
+              "       'este é um trabalho agradável, o ambiente é bastante acolhedor ',\n",
+              "       'hoje é um belo dia para viver e se divertir',\n",
+              "       'que ótimo dia, vai dar tudo certo',\n",
+              "       'saber encontrar a alegria na alegria dos outros, é o segredo da felicidade',\n",
+              "       'a alegria de fazer o bem é a única felicidade verdadeira',\n",
+              "       'o melhor lugar do mundo é sempre ao lado de quem te faz feliz',\n",
+              "       'a maior felicidade é ver algum amigo meu atingir seus objetivos, comemoro como se fosse uma vitória minha',\n",
+              "       'o meu trabalho me deixa imensamente feliz, adoro a área que atuo',\n",
+              "       'não teria que controlar a minha raiva se as pessoas aprendessem a controlar a estupidez',\n",
+              "       'me sinto vazia, sem ela nada disso importa',\n",
+              "       'que droga, eu não passei de ano na escola',\n",
+              "       'não tenho paciência com gente lerda e burra',\n",
+              "       'infelizmente terei que deixar você, vamos acabar nosso relacionamento',\n",
+              "       'sacrificar ou maltratar animais devido à ganância é muito triste',\n",
+              "       'acordei triste demais, não consigo sequer sair da minha cama',\n",
+              "       'o que me deixa triste é saber que não posso fazer nada para ajudar, me sinto inútil vendo algo ruim acontecer',\n",
+              "       'porra, eu não quero esperar nada, sai da minha frente',\n",
+              "       'preconceito me dá muita raiva, que povo escroto',\n",
+              "       'saia de perto de mim agora',\n",
+              "       'se ele não sair daqui agora, vou bater nele',\n",
+              "       'odeio ter que acordar muito cedo', 'eu vou matar ele',\n",
+              "       'te odeio, não quero mais saber de você',\n",
+              "       'não quero saber de nada', 'odeio essa lanchonete',\n",
+              "       'o passeio que a gente fez hoje foi horrível, só perdi meu tempo',\n",
+              "       'se meus olhos mostrassem a minha alma, todos, ao me verem, chorariam comigo',\n",
+              "       'sofro com essa distância entre nós, não aguento mais ficar longe',\n",
+              "       'estou em grande sofrimento me ajude',\n",
+              "       'me sinto só, me sinto triste, já não vejo mais sentido em nada que faço só queria que essa dor passasse',\n",
+              "       'queria parar de chorar por um momento, me sinto mal a todo instante, qualquer ambiente me deixa mal',\n",
+              "       'choro porque é a única forma de me livrar dessa tristeza'],\n",
+              "      dtype=object)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4JBcUg0HP2Ga",
+        "outputId": "48159273-8cc9-482d-96da-bcf4c9225e4d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "sentimentos = base_de_dados['Sentimento'].values\n",
+        "sentimentos"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['tristeza', 'tristeza', 'tristeza', 'felicidade', 'felicidade',\n",
+              "       'felicidade', 'felicidade', 'raiva', 'raiva', 'felicidade',\n",
+              "       'felicidade', 'felicidade', 'tristeza', 'tristeza', 'tristeza',\n",
+              "       'tristeza', 'raiva', 'raiva', 'tristeza', 'tristeza', 'tristeza',\n",
+              "       'raiva', 'raiva', 'raiva', 'felicidade', 'felicidade', 'tristeza',\n",
+              "       'tristeza', 'tristeza', 'tristeza', 'felicidade', 'felicidade',\n",
+              "       'raiva', 'raiva', 'felicidade', 'felicidade', 'felicidade',\n",
+              "       'felicidade', 'felicidade', 'felicidade', 'felicidade',\n",
+              "       'felicidade', 'raiva', 'raiva', 'raiva', 'raiva', 'tristeza',\n",
+              "       'tristeza', 'tristeza', 'tristeza', 'raiva', 'raiva', 'raiva',\n",
+              "       'raiva', 'raiva', 'raiva', 'raiva', 'raiva', 'raiva', 'raiva',\n",
+              "       'tristeza', 'tristeza', 'tristeza', 'tristeza', 'tristeza',\n",
+              "       'tristeza'], dtype=object)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ey8KpnBdQDdD"
+      },
+      "source": [
+        "\n",
+        "Para treinar o modelo será utilizada a abordagem Bag of Words e o algoritmo Naive Bayes Multinomial\n",
+        "\n",
+        "Bag of Words, na prática, cria um vetor com cada uma das palavras da frase, depois, calcula a frequência em que essas palavras ocorrem, para então classificar/treinar o modelo"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Gj2jsfBaVBKi",
+        "outputId": "887fb4fc-b987-4328-c55f-125457399f2b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "vectorizer = CountVectorizer(analyzer=\"word\")\n",
+        "frequencia = vectorizer.fit_transform(frases)\n",
+        "# A função fit_transform faz o processo de ajustar o modelo, aprender o vocabulário, \n",
+        "# e transformar os dados de treinamento em feature vectors (vetores com frequêcia das palavras)\n",
+        "\n",
+        "modelo = MultinomialNB()\n",
+        "modelo.fit(frequencia, sentimentos)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
         }
       ]
     }
