teste do modelo finalizado

--- a/analise-sentimento/analise.ipynb
+++ b/analise-sentimento/analise.ipynb
@@ -88,7 +88,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "0NAebFpaOMMa",
-        "outputId": "bbfdf675-d6d7-48a3-f472-e05f63612f96",
+        "outputId": "03a51a2a-0c10-4d8a-886f-9f2a1ce48297",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -184,7 +184,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Nlzf8wJCOMaa",
-        "outputId": "8f8b16c2-824d-4373-f1db-1abd1c995bd1",
+        "outputId": "401208c9-84b5-4ce3-9037-3571d99785dd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -223,7 +223,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "FVj92KCgOMr5",
-        "outputId": "fb1138af-993b-4672-9809-642c01e04386",
+        "outputId": "10ac22df-1179-4419-f85f-4d70f66aa195",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -262,7 +262,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "IRYHm5o9OxJ4",
-        "outputId": "91178503-fc03-40bf-a463-d477be056a92",
+        "outputId": "34676a47-01c6-48de-c23c-e61b25483e54",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -301,7 +301,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "z5qY0i1oOxYf",
-        "outputId": "1e66361b-73c2-456d-8905-5b053d043f02",
+        "outputId": "d2bee15a-4cbb-48bc-fdfb-46862562b180",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -349,7 +349,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "nCob-tM8P2Pq",
-        "outputId": "5bb4d2bc-ade6-4a4e-91c6-899a24aeb5a7",
+        "outputId": "aad2a3fc-f439-444e-9b0e-55303c20e12f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -442,7 +442,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "4JBcUg0HP2Ga",
-        "outputId": "48159273-8cc9-482d-96da-bcf4c9225e4d",
+        "outputId": "21b85f36-f7ca-4681-d78b-bf399baff03c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -495,7 +495,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Gj2jsfBaVBKi",
-        "outputId": "887fb4fc-b987-4328-c55f-125457399f2b",
+        "outputId": "5a7f9d01-0058-40b3-fda2-430e021620be",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -522,6 +522,48 @@
             "tags": []
           },
           "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Zxn9PEVIWXnJ"
+      },
+      "source": [
+        "### Testando o modelo"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GDrf9EBlWdIZ",
+        "outputId": "333acabc-b1c7-4a5c-f39e-4ec3ace42c6d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "frases_teste = [\"Não quero saber de nada, eu te odeio!\",\n",
+        "                \"Sinto sua falta\",\n",
+        "                \"Finalmente consegui o estágio que queria!\",\n",
+        "                \"Estou feliz por você estar bem\",\n",
+        "                \"Eu não suporto aquela pessoa.\",\n",
+        "                \"Meu primo pegou corona vírus, mas sobreviveu, ainda bem!\",\n",
+        "                \"Não estou me sentindo bem hoje, quero ficar sozinha\"]\n",
+        "\n",
+        "frequencia_testes = vectorizer.transform(frases_teste)\n",
+        "print(modelo.predict(frequencia_testes))"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['raiva' 'tristeza' 'felicidade' 'felicidade' 'raiva' 'felicidade'\n",
+            " 'tristeza']\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
