avaliação do modelo concluída

--- a/analise-sentimento/analise.ipynb
+++ b/analise-sentimento/analise.ipynb
@@ -88,7 +88,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "0NAebFpaOMMa",
-        "outputId": "03a51a2a-0c10-4d8a-886f-9f2a1ce48297",
+        "outputId": "29107540-9aa7-4051-83e0-75c76f6ac26a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -184,7 +184,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Nlzf8wJCOMaa",
-        "outputId": "401208c9-84b5-4ce3-9037-3571d99785dd",
+        "outputId": "67a0368b-a651-4922-84c0-a5c656c91209",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -223,7 +223,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "FVj92KCgOMr5",
-        "outputId": "10ac22df-1179-4419-f85f-4d70f66aa195",
+        "outputId": "65c0e52f-0973-48d3-bfc0-0c622e0dc46e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -262,7 +262,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "IRYHm5o9OxJ4",
-        "outputId": "34676a47-01c6-48de-c23c-e61b25483e54",
+        "outputId": "61622049-fabe-4b36-8a63-6634767d6fc3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -301,7 +301,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "z5qY0i1oOxYf",
-        "outputId": "d2bee15a-4cbb-48bc-fdfb-46862562b180",
+        "outputId": "a1b4a397-2783-4414-8321-a9f3fd167159",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -349,7 +349,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "nCob-tM8P2Pq",
-        "outputId": "aad2a3fc-f439-444e-9b0e-55303c20e12f",
+        "outputId": "af67095b-643a-4d27-aca0-27c3ed078f52",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -442,7 +442,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "4JBcUg0HP2Ga",
-        "outputId": "21b85f36-f7ca-4681-d78b-bf399baff03c",
+        "outputId": "64c5c462-92b3-434b-c59b-834fccccd634",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -495,7 +495,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Gj2jsfBaVBKi",
-        "outputId": "5a7f9d01-0058-40b3-fda2-430e021620be",
+        "outputId": "f85f0341-70c8-41fc-85a3-d9993724e8c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -538,7 +538,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "GDrf9EBlWdIZ",
-        "outputId": "333acabc-b1c7-4a5c-f39e-4ec3ace42c6d",
+        "outputId": "48b53f24-c9ef-4394-f9ff-1be30d8a8f9e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -565,6 +565,205 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wxw9B9GEYkn5"
+      },
+      "source": [
+        "### Avaliando o modelo"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XJWMjHsBYqvA"
+      },
+      "source": [
+        "- Fazendo a validação cruzada do modelo através da função `cross_val_predict`, ele é dividido em 19 partes, treinado em 18 e testado em 1\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8PdZuMJHYocv",
+        "outputId": "305ada0a-dabd-46e3-a536-b7be592f006d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "resultados = cross_val_predict(modelo, frequencia, sentimentos, cv = 19) #cv corresponde ao menor número de membros existentes na classe 'Sentimento', nesse caso, seria o valor total de 'felicidade'\n",
+        "resultados"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['tristeza', 'tristeza', 'raiva', 'tristeza', 'felicidade',\n",
+              "       'felicidade', 'felicidade', 'raiva', 'raiva', 'tristeza', 'raiva',\n",
+              "       'felicidade', 'tristeza', 'tristeza', 'raiva', 'felicidade',\n",
+              "       'raiva', 'raiva', 'tristeza', 'tristeza', 'tristeza', 'raiva',\n",
+              "       'raiva', 'raiva', 'felicidade', 'tristeza', 'tristeza', 'raiva',\n",
+              "       'tristeza', 'felicidade', 'felicidade', 'felicidade', 'raiva',\n",
+              "       'raiva', 'felicidade', 'tristeza', 'felicidade', 'felicidade',\n",
+              "       'felicidade', 'felicidade', 'felicidade', 'felicidade', 'raiva',\n",
+              "       'tristeza', 'raiva', 'raiva', 'tristeza', 'tristeza', 'tristeza',\n",
+              "       'tristeza', 'raiva', 'raiva', 'raiva', 'raiva', 'raiva', 'raiva',\n",
+              "       'raiva', 'raiva', 'raiva', 'raiva', 'felicidade', 'tristeza',\n",
+              "       'tristeza', 'tristeza', 'tristeza', 'felicidade'], dtype='<U10')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VYvcs323alaH"
+      },
+      "source": [
+        "- Medidas de validação do modelo utilizando a função `classification_report`"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bh4imKnRahoq",
+        "outputId": "7e7a7998-33ff-4bf6-d0ec-001919dc33cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "target = ['felicidade', 'raiva', 'tristeza']\n",
+        "print(classification_report(sentimentos, resultados, target))"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "  felicidade       0.78      0.74      0.76        19\n",
+            "       raiva       0.85      0.96      0.90        23\n",
+            "    tristeza       0.77      0.71      0.74        24\n",
+            "\n",
+            "    accuracy                           0.80        66\n",
+            "   macro avg       0.80      0.80      0.80        66\n",
+            "weighted avg       0.80      0.80      0.80        66\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2aAVKGXZasFT"
+      },
+      "source": [
+        "\n",
+        "precision = true positive / (true positive + false positive)\n",
+        "\n",
+        "recall = true positive / (true positive + false negative)\n",
+        "\n",
+        "f1-score = 2 ((precision recall) / (precision + recall))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "M3FRTxd1axjl"
+      },
+      "source": [
+        "- Gerando uma matriz de confusão para poder visualizar o desempenho do algoritmo"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xv6R-N-OaxVC",
+        "outputId": "2e1e1b04-fbe6-4eee-ab94-886cda336465",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(pd.crosstab(sentimentos, resultados, rownames = [\"Real\"], colnames=[\"Predito\"], margins=True))"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Predito     felicidade  raiva  tristeza  All\n",
+            "Real                                        \n",
+            "felicidade          14      1         4   19\n",
+            "raiva                0     22         1   23\n",
+            "tristeza             4      3        17   24\n",
+            "All                 18     26        22   66\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6f_rXmP-a-qC"
+      },
+      "source": [
+        "- Calculando a acurácia (proximidade de um resultado com o seu valor de referência real) do modelo\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uihM_VInasXB",
+        "outputId": "c9195833-661d-4fc7-cd55-66aa0276b504",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "accuracy_score(sentimentos, resultados)"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.803030303030303"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v4Pr68NObiPD"
+      },
+      "source": [
+        "Uma acurácia de nível entre 30 e 90% apresenta resultados de média precisão. Sendo assim, dependendo da informação a ser validada e do nível de risco que um erro ou engano representaria para seu negócio, soluções com esse nível de acurácia podem valer a pena."
       ]
     }
   ]
