símbolo de multiplicação faltante adicionado
na explicação dos resultados da função classification_report a fórmula de f1-score estava sem o símbolo de multiplicação

--- a/analise-sentimento/analise.ipynb
+++ b/analise-sentimento/analise.ipynb
@@ -50,7 +50,7 @@
         "from sklearn.metrics import accuracy_score, classification_report\n",
         "from sklearn.model_selection import cross_val_predict"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -71,7 +71,7 @@
       "source": [
         "base_de_dados = pd.read_csv('https://raw.githubusercontent.com/audreyemmely/DSProjects/master/analise-sentimento/analise-base.csv')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
       "source": [
         "base_de_dados.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -192,7 +192,7 @@
       "source": [
         "base_de_dados.count()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -231,7 +231,7 @@
       "source": [
         "base_de_dados[base_de_dados.Sentimento == 'felicidade'].count()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -270,7 +270,7 @@
       "source": [
         "base_de_dados[base_de_dados.Sentimento == 'raiva'].count()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -309,7 +309,7 @@
       "source": [
         "base_de_dados[base_de_dados.Sentimento == 'tristeza'].count()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -358,7 +358,7 @@
         "frases = base_de_dados['Frase'].values\n",
         "frases"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -451,7 +451,7 @@
         "sentimentos = base_de_dados['Sentimento'].values\n",
         "sentimentos"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -509,7 +509,7 @@
         "modelo = MultinomialNB()\n",
         "modelo.fit(frequencia, sentimentos)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -555,7 +555,7 @@
         "frequencia_testes = vectorizer.transform(frases_teste)\n",
         "print(modelo.predict(frequencia_testes))"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -599,7 +599,7 @@
         "resultados = cross_val_predict(modelo, frequencia, sentimentos, cv = 19) #cv corresponde ao menor número de membros existentes na classe 'Sentimento', nesse caso, seria o valor total de 'felicidade'\n",
         "resultados"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -648,7 +648,7 @@
         "target = ['felicidade', 'raiva', 'tristeza']\n",
         "print(classification_report(sentimentos, resultados, target))"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -679,7 +679,7 @@
         "\n",
         "recall = true positive / (true positive + false negative)\n",
         "\n",
-        "f1-score = 2 ((precision recall) / (precision + recall))"
+        "f1-score = 2 × ((precision × recall) / (precision + recall))"
       ]
     },
     {
@@ -703,7 +703,7 @@
       "source": [
         "print(pd.crosstab(sentimentos, resultados, rownames = [\"Real\"], colnames=[\"Predito\"], margins=True))"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -741,7 +741,7 @@
       "source": [
         "accuracy_score(sentimentos, resultados)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
